# ejercicios-2018-matinsaurralde

U00_Repaso/Ej-01/: Circulo.cpp  Circulo.h  Cuadrado.cpp  Cuadrado.h  Geometria.cpp  Geometria.h  Triangulo.cpp  Triangulo.h
U00_Repaso/Ej-02/: Calculadora.h  main.cpp
U01_Recursividad/Ej-01/: main.cpp  potencia.cpp
U01_Recursividad/Ej-02/: main.cpp  sumatoria.cpp  sumatoria.h
U01_Recursividad/Ej-05/: digitos.cpp  main.cpp
U02_Listas/: CMakeLists.txt  README.md
U02_Listas/Ej-01/: fnInvierte.h  main.cpp
U02_Listas/Ej-02/: main.cpp
U02_Listas/Ej-04/: main.cpp  union.h
U02_Listas/Lista/: IntentoListasPropioConErrores  Lista.h  Nodo.cpp  Nodo.h  README.md  nodo.h
U03_Pilas/: README.md
U03_Pilas/Ej-01/: main.cpp
U03_Pilas/Ej-02/: main.cpp
U03_Pilas/Ej-03/: main.cpp
U03_Pilas/Ej-04/: main.cpp
U03_Pilas/Pila/: Pila.h
U04_Colas/: CMakeLists.txt
U04_Colas/Cola/: Cola.h  Nodo.h
U04_Colas/Ej-01/: main.cpp
U04_Colas/Ej-02/: main.cpp
U04_Colas/Ej-03/: ColaPrioridades.h  main.cpp  nodo.h
U04_Colas/Ej-05/: main.cpp
U05_Hash/: README.md
test/U04_Colas/: Colas.cpp
